--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "4loop",
   "version": "0.1.0",
   "private": true,
-  
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
@@ -29,6 +28,7 @@
     "mongoose-paginate-v2": "^1.9.1",
     "next": "15.4.5",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.9",
     "react": "^19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
