--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
+    "resend": "^6.1.2",
     "swr": "^2.3.6",
     "yup": "^1.7.0"
   },
