--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^8.17.0",
     "mongoose-paginate-v2": "^1.9.1",
     "next": "15.4.5",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.9",
     "react": "^19.1.0",
