--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.2.1",
     "resend": "^6.1.2",
+    "save": "^2.9.0",
     "swr": "^2.3.6",
     "yup": "^1.7.0"
   },
