--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.2.1",
     "@mui/icons-material": "^7.3.2",
-    "@mui/material": "^7.2.0",
+    "@mui/material": "^7.3.4",
+    "@mui/system": "^7.3.3",
     "@react-email/render": "^1.3.2",
     "@tanstack/react-query": "^5.84.1",
     "@tanstack/react-query-devtools": "^5.84.1",
