--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
+    "react-to-print": "^3.2.0",
     "react-toastify": "^11.0.5",
     "recharts": "^3.2.1",
     "resend": "^6.1.2",
